[PE] Fix float painting under inline when self-painting status changes

Previously we did not consider non-BlockFlow elements in the containing block chain
between the float and the containing BlockFlow.

The code being fixed was introduced here, as part of solving a similar situation:
https://codereview.chromium.org/1661523002. It seems that the case of under-inline was not
skipped on purpose.

Bug: 833602

Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I311ebb3d9f2172ed041bf0e6c8a583d89ae1a74a
Reviewed-on: https://chromium-review.googlesource.com/1188980
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586301}
Former-commit-id: 80f9e6e7a9840612aa15233920df0cc152ac014c